# ai-voice-assistant

./: .gitattributes  .gitignore  README.md  check_onnx.py  conf_asr.json  conf_llm.json  install_dev.sh  local-voice-ai.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  sam-reqs.txt  setup_py310_env.sh  writeup.md
ai_voice_assistant/: CONFIG_README.md  audio_handler.py  conf_asr.json  conf_llm.json  conf_tts.json  config_assistant.py  llm_handler.py  main.py  transcriber.py  tts_handler.py  voice_assistant.py
ai_voice_assistant/config/: conf_asr.json  conf_llm.json  conf_tts.json
examples/: neurosama.py  tasks.csv  tools.py  whisper-gradio.py
main/: main.py  voice_assistant.py
main/components/: audio_handler.py  llm_handler.py
main/evaluate/: debug_bert_load.py
main/fine_tuning/: bert_classification.py  bert_example.ipynb  bert_finetune_multiple.ipynb  bert_finetune_single.ipynb  dataset_augmentation.py  emotiondetection.py  emotionrecognition.py  emotiontraining.py  finetune.ipynb  roberta_classification.py  test_boris_model.py  test_peft_checkpoint.py  utils.py  utils_emotiontraining.py
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-100/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-125/: adapter_config.json  adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-150/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-175/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-200/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-225/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
main/fine_tuning/unsloth/Llama-3.2-1B-Instruct-lora-text-classification/checkpoint-25/: adapter_model.safetensors  optimizer.pt  (+2 more)
main/rag/: importdocs.py  search.py
main/rag/textdata/: jellyshroom.txt
main/sklearn_training/: train_sklearn_models.py
models/faster-whisper/models--Systran--faster-whisper-small/blobs/: ._3e305921506d8872816023e4c273e75d2419fb89b24da97b4fe7bce14170d671
models/faster-whisper/models--Systran--faster-whisper-small/refs/: main
newest-dependencies/: pyvenv.cfg
test/: test_boris_model.py  test_peft_checkpoint.py
voices/: af_sky.pt
(+24 files in other folders)
