[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-voice-assistant"
version = "0.1.0"
description = "A voice-based AI assistant using Whisper for speech recognition and Ollama for LLM interaction"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.37.0",
    "ollama>=0.1.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "SpeechRecognition>=3.10.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "sentencepiece>=0.2.0",
    "accelerate>=0.26.0",
    "einops>=0.7.0",
    # For examples
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
voice-assistant = "ai_voice_assistant.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_voice_assistant"] 