[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-voice-assistant"
version = "0.1.0"
description = "A voice-based AI assistant using Whisper for speech recognition and Ollama for LLM interaction"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # Core dependencies
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.37.0",
    "ollama>=0.1.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "SpeechRecognition>=3.10.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "sentencepiece>=0.2.0",
    "accelerate>=0.26.0",
    "einops>=0.7.0",
    
    # TTS dependencies
    "kokoro>=0.3.4",
    "espeak-phonemizer>=1.0.0",
    
    # Speech recognition improvements
    "faster-whisper>=0.10.0",
    
    # Additional utilities
    "datasets>=2.14.0",
    "librosa>=0.10.1",
    "scipy>=1.10.0",
    "ffmpeg-python>=0.2.0",
    
    # For examples and UI
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
voice-assistant = "ai_voice_assistant.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/ai-voice-assistant"
"Bug Tracker" = "https://github.com/yourusername/ai-voice-assistant/issues"

[tool.hatch.build.targets.wheel]
packages = ["ai_voice_assistant"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=ai_voice_assistant {args:tests}"

[tool.black]
line-length = 100
target-version = ["py310"] 